--- a/Green_screen_problem.ipynb
+++ b/Green_screen_problem.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -80,15 +80,35 @@
     "for i in range(x1):\n",
     "    for j in range(y1):\n",
     "        if (fgimage_rgb[j, i][1] > fgimage_rgb[j, i][0] + 20 and fgimage_rgb[j, i][1] > fgimage_rgb[j, i][2] + 20):\n",
-    "            fgimage_rgb[j, i] = bgimage_rgb[j, i]\n",
-    "plt.imshow(fgimage_rgb)\n",
+    "            new_image[j, i] = bgimage_rgb[j, i]\n",
+    "plt.imshow(new_image)\n",
     "plt.axis(\"off\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv.imwrite('saved_image.png', new_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
